Expand installation documentation